Source/WebCore/bindings/js/JSExtendableMessageEventCustom.cpp
@@ -41,8 +41,6 @@ JSC::EncodedJSValue constructJSExtendableMessageEvent(JSC::JSGlobalObject* lexic
     auto throwScope = DECLARE_THROW_SCOPE(vm);
     UNUSED_PARAM(throwScope);
 
-    auto* jsConstructor = jsCast<JSDOMConstructorBase*>(callFrame.jsCallee());
-    ASSERT(jsConstructor);
     if (UNLIKELY(callFrame.argumentCount() < 1))
         return throwVMError(lexicalGlobalObject, throwScope, createNotEnoughArgumentsError(lexicalGlobalObject));
     auto type = convert<IDLAtomStringAdaptor<IDLDOMString>>(*lexicalGlobalObject, callFrame.uncheckedArgument(0));
@@ -50,39 +48,18 @@ JSC::EncodedJSValue constructJSExtendableMessageEvent(JSC::JSGlobalObject* lexic
     auto eventInitDict = convert<IDLDictionary<ExtendableMessageEvent::Init>>(*lexicalGlobalObject, callFrame.argument(1));
     RETURN_IF_EXCEPTION(throwScope, encodedJSValue());
 
-    JSValue data = eventInitDict.data;
     auto object = ExtendableMessageEvent::create(*lexicalGlobalObject, WTFMove(type), WTFMove(eventInitDict));
     RETURN_IF_EXCEPTION(throwScope, encodedJSValue());
 
-    JSValue wrapper = toJSNewlyCreated<IDLInterface<ExtendableMessageEvent>>(*lexicalGlobalObject, *jsConstructor->globalObject(), WTFMove(object));
-
-    // Cache the JSValue passed in for data parameter in the wrapper so the getter returns the exact value
-    // it was initialized too. We do not store the JSValue in the implementation object to avoid leaks.
-    auto* jsMessageEvent = jsCast<JSExtendableMessageEvent*>(wrapper);
-    jsMessageEvent->m_data.set(vm, jsMessageEvent, data);
-
-    return JSValue::encode(wrapper);
+    return JSValue::encode(object.strongWrapper.get());
 }
 
-JSValue JSExtendableMessageEvent::data(JSGlobalObject& lexicalGlobalObject) const
+template<typename Visitor>
+void JSExtendableMessageEvent::visitAdditionalChildren(Visitor& visitor)
 {
-    if (JSValue cachedValue = m_data.get()) {
-        // We cannot use a cached object if we are in a different world than the one it was created in.
-        if (isWorldCompatible(lexicalGlobalObject, cachedValue))
-            return cachedValue;
-        ASSERT_NOT_REACHED();
-    }
-
-    auto& event = wrapped();
-    JSValue result;
-    if (auto* serializedValue = event.data())
-        result = serializedValue->deserialize(lexicalGlobalObject, globalObject(), event.ports(), SerializationErrorMode::NonThrowing);
-    else
-        result = jsNull();
-
-    // Save the result so we don't have to deserialize the value again.
-    m_data.set(lexicalGlobalObject.vm(), this, result);
-    return result;
+    wrapped().data().visit(visitor);
 }
+
+DEFINE_VISIT_ADDITIONAL_CHILDREN(JSExtendableMessageEvent);
 
 }
